--- a/blog/web_site/templates/web_site/index.html
+++ b/blog/web_site/templates/web_site/index.html
@@ -9,7 +9,7 @@
     {% for article in articles %}
     <div class="col-4">
         <div class="card">
-            <img src="{{ article.photo.url }}" class="card-img-top" alt="...">
+            <img src="{{ article.photo.url }}" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
             <div class="card-body">
                 <h5 class="card-title">{{ article.title }}</h5>
                 <p class="card-text">{{ article.short_description }}</p>
@@ -29,7 +29,7 @@
                 </li>
             </ul>
             <div class="card-body">
-                <a href="#" class="card-link">Подробнее</a>
+                <a href="{% url 'article_detail' article.pk %}" class="card-link">Подробнее</a>
             </div>
         </div>
     </div>
