--- a/blog/templates/include/_navbar.html
+++ b/blog/templates/include/_navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary mb-5">
     <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,8 +39,8 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
-                <a href="#" class="btn btn-success">Войти</a>
-                <a href="#" class="btn btn-warning">Регистрация</a>
+                <a href="{% url 'login_view' %}" class="btn btn-success">Войти</a>
+                <a href="{% url 'register_view' %}" class="btn btn-warning">Регистрация</a>
                 <a href="#" class="btn btn-danger">Выйти</a>
             </div>
         </div>
