--- a/blog/web_site/templates/web_site/article_detail.html
+++ b/blog/web_site/templates/web_site/article_detail.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="card">
-    <img src="{{ article.photo.url }}" class="card-img-top" alt="..."">
+    <img src="{{ article.photo.url }}" class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title">{{ article.title }}</h5>
         <p class="card-text">{{ article.short_description }}</p>
