add created article

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>
@@ -14,8 +14,6 @@
         #lang_form .select2-selection__rendered {
             overflow: visible !important;
         }
-
-
     </style>
 </head>
 <body>
