--- a/blog/templates/include/_navbar.html
+++ b/blog/templates/include/_navbar.html
@@ -37,8 +37,8 @@
                 </li>
             </ul>
             <div class="d-flex column-gap-2 align-items-center">
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex" role="search" action="{% url 'search' %}">
+                    <input name="q" class="form-control me-2" type="search" placeholder="Найти" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Поиск</button>
                 </form>
                 {% if not request.user.is_authenticated %}
