--- a/blog/web_site/templates/web_site/article_detail.html
+++ b/blog/web_site/templates/web_site/article_detail.html
@@ -26,10 +26,10 @@
         </li>
     </ul>
     <div class="card-body d-flex justify-content-between align-items-center">
-        {% if requests.user.is_authenticated and requests.user == article.author %}
+        {% if request.user.is_authenticated and request.user == article.author %}
         <div class="d-flex gap-3">
-            <a href="#" class="btn btn-danger">Удалить</a>
-            <a href="#" class="btn btn-warning">Изменить</a>
+            <a href="{% url 'delete' article.pk %}" class="btn btn-danger">Удалить</a>
+            <a href="{% url 'update' article.pk %}" class="btn btn-warning">Изменить</a>
         </div>
         {% endif %}
         <div class="d-flex gap-3">
