--- a/blog/web_site/templates/web_site/article_detail.html
+++ b/blog/web_site/templates/web_site/article_detail.html
@@ -38,4 +38,74 @@
         </div>
     </div>
 </div>
+
+
+<div class="mt-5">
+    <h2 class="text-center">Комментарии</h2>
+    {% if not request.user.is_authenticated %}
+    <p class="text-center">
+        Оставлять комментраии могут только авторизованные пользователи
+        <a href="{% url 'login' %}">Войти</a>
+    </p>
+    {% endif %}
+
+    <div class="comments d-flex flex-column row-gap-3 mb-3">
+        <div class="card">
+            <div class="card-header">
+                Quote
+            </div>
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>A well-known quote, contained in a blockquote element.</p>
+                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
+                    </footer>
+                </blockquote>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                Quote
+            </div>
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>A well-known quote, contained in a blockquote element.</p>
+                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
+                    </footer>
+                </blockquote>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                Quote
+            </div>
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>A well-known quote, contained in a blockquote element.</p>
+                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
+                    </footer>
+                </blockquote>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                Quote
+            </div>
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>A well-known quote, contained in a blockquote element.</p>
+                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
+                    </footer>
+                </blockquote>
+            </div>
+        </div>
+    </div>
+
+    {% if request.user.is_authenticated %}
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.body }}
+        <button class="btn btn-info mb-3">Отправить</button>
+    </form>
+    {% endif %}
+</div>
 {% endblock content %}
