--- a/blog/web_site/templates/web_site/article_detail.html
+++ b/blog/web_site/templates/web_site/article_detail.html
@@ -50,54 +50,20 @@
     {% endif %}
 
     <div class="comments d-flex flex-column row-gap-3 mb-3">
+        {% for comment in comments %}
         <div class="card">
             <div class="card-header">
-                Quote
+                {{ comment.author }}
             </div>
             <div class="card-body">
                 <blockquote class="blockquote mb-0">
-                    <p>A well-known quote, contained in a blockquote element.</p>
-                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
+                    <p>{{ comment.body }}</p>
+                    <footer class="blockquote-footer"><cite title="{{ comment.created_at }}">{{ comment.created_at }}</cite>
                     </footer>
                 </blockquote>
             </div>
         </div>
-        <div class="card">
-            <div class="card-header">
-                Quote
-            </div>
-            <div class="card-body">
-                <blockquote class="blockquote mb-0">
-                    <p>A well-known quote, contained in a blockquote element.</p>
-                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                    </footer>
-                </blockquote>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-header">
-                Quote
-            </div>
-            <div class="card-body">
-                <blockquote class="blockquote mb-0">
-                    <p>A well-known quote, contained in a blockquote element.</p>
-                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                    </footer>
-                </blockquote>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-header">
-                Quote
-            </div>
-            <div class="card-body">
-                <blockquote class="blockquote mb-0">
-                    <p>A well-known quote, contained in a blockquote element.</p>
-                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                    </footer>
-                </blockquote>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 
     {% if request.user.is_authenticated %}
