--- a/blog/web_site/templates/web_site/article_detail.html
+++ b/blog/web_site/templates/web_site/article_detail.html
@@ -16,7 +16,12 @@
             Кол-во просмотров: <b>{{ article.views }}</b>
         </li>
         <li class="list-group-item">
-            Автор: <b>{{ article.author }}</b>
+            Автор: 
+            <b>
+                <a href="{% url 'profile' article.author %}">
+                {{ article.author }}
+                </a>
+            </b>
         </li>
         <li class="list-group-item">
             Время создания: <b>{{ article.created_at }}</b>
@@ -53,7 +58,9 @@
         {% for comment in comments %}
         <div class="card">
             <div class="card-header">
-                {{ comment.author }}
+                <a href="{% url 'profile' comment.author %}">
+                    {{ comment.author }}
+                </a>
             </div>
             <div class="card-body">
                 <blockquote class="blockquote mb-0">
