--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="ru" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex, nofollow">
     <title>
         {% block title %}
         {% endblock title %}
