--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -5,12 +5,22 @@
     <meta name="robots" content="noindex, nofollow">
     <title>
         {% block title %}
-        {% endblock title %}
+        {% endblock %}
     </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
-    <link rel="icon" href="https://i.imgur.com/Dc4zSZj.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+          crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+          rel="stylesheet"/>
+
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+    <link rel="icon"
+          href="https://i.imgur.com/Dc4zSZj.png"
+          type="image/x-icon">
 
     <style>
         #lang_form .select2-selection__rendered {
@@ -46,6 +56,7 @@
     $('#id_label_single').select2({
         minimumResultsForSearch: Infinity
     });
+
 
 
 </script>
