--- a/blog/web_site/templates/web_site/favorite.html
+++ b/blog/web_site/templates/web_site/favorite.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Главная страница
-{% endblock title %}
+Избранные: {{ user.username }}
+{% endblock %}
 
 
 {% block content %}
+<h1>Избранные</h1>
+
 <div class="row row-gap-4">
     {% for article in articles %}
     <div class="col-4">
@@ -20,7 +22,7 @@
                     Кол-во просмотров: <b>{{ article.views }}</b>
                 </li>
                 <li class="list-group-item">
-                    Автор: 
+                    Автор:
                     <b>
                         <a href="{% url 'profile' article.author %}">
                             {{ article.author }}
@@ -36,10 +38,10 @@
             </ul>
             <div class="card-body d-flex align-item-center justify-content-between">
                 <a href="{% url 'article_detail' article.pk %}" class="card-link">Подробнее</a>
-                <a href="#" class="text-success fs-5"><i class="bi bi-bookmark-star"></i></a>
+                <a href="#" class="text-danger fs-5"><i class="bi bi-bookmark-star"></i></a>
             </div>
         </div>
     </div>
     {% endfor %}
 </div>
-{% endblock content %}
+{% endblock %}
