On branch main  Your branch is up to date with 'origin/main'.  Changes to be committed: 	new file:   "blog/media/photos/articles/\320\241\320\277\320\276\321\200\321\202.jpg" 	modified:   blog/web_site/templates/web_site/article_form.html 	modified:   blog/web_site/urls.py 	modified:   blog/web_site/views.py

--- a/blog/web_site/templates/web_site/article_form.html
+++ b/blog/web_site/templates/web_site/article_form.html
@@ -2,9 +2,8 @@
 
 {% block title %}
 
-<!-- Создание статей -->
 {% if 'create' in request.path %}
-Создать статью:
+Создать статью
 {% else %}
 Обнавить статью: {{ article.title }}
 {% endif %}
