--- a/blog/web_site/templates/web_site/index.html
+++ b/blog/web_site/templates/web_site/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load custom_tags %}
 
 {% block title %}
 Главная страница
@@ -8,6 +9,8 @@
 {% block content %}
 <div class="row row-gap-4">
     {% for article in articles %}
+
+    {% is_article_added_to_fav_to_user request.user article as is_fav %}
     <div class="col-4">
         <div class="card">
             <img src="{{ article.photo.url }}" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
@@ -35,8 +38,17 @@
                 </li>
             </ul>
             <div class="card-body d-flex align-item-center justify-content-between">
-                <a href="{% url 'article_detail' article.pk %}" class="card-link">Подробнее</a>
-                <a href="#" class="text-success fs-5"><i class="bi bi-bookmark-star"></i></a>
+                <a href="{% url 'article_detail' article.pk %}" class="card-link btn btn-info">Подробнее</a>
+                {% if request.user.is_authenticated %}
+
+                    {% if not is_fav %}
+                    <a href="{% url 'add_fav' username=request.user.username article_id=article.pk %}" 
+                        class="text-success fs-5"><i class="bi bi-bookmark-star"></i></a>
+                    {% else %}
+                    <a href="{% url 'delete_fav' username=request.user.username article_id=article.pk %}" 
+                        class="text-success fs-5"><i class="bi bi-bookmark-star-fill"></i></a>
+                    {% endif %}
+                {% endif %}
             </div>
         </div>
     </div>
