--- a/blog/web_site/templates/web_site/article_form.html
+++ b/blog/web_site/templates/web_site/article_form.html
@@ -2,25 +2,24 @@
 
 {% block title %}
 
-<!-- Создание статей -->
 {% if 'create' in request.path %}
-Создать статью:
+Создать статью
 {% else %}
-Обнавить статью: {{ article.title }}
+Обновить статью: {{ article.title }}
 {% endif %}
 
-{% endblock title %}
+{% endblock %}
 
 {% block content %}
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
 
     {{ form.as_p }}
-
     {% if 'create' in request.path %}
     <button class="btn btn-success" type="submit">Создать</button>
     {% else %}
-    <button class="btn btn-info" type="submit">Обнавить</button>
+    <button class="btn btn-info" type="submit">Обновить</button>
     {% endif %}
+
 </form>
 {% endblock content %}
