--- a/blog/web_site/templates/web_site/index.html
+++ b/blog/web_site/templates/web_site/index.html
@@ -7,10 +7,12 @@
 
 
 {% block content %}
+
 <div class="row row-gap-4">
     {% for article in articles %}
 
-    {% is_article_added_to_fav_to_user request.user article as is_fav %}
+    {% is_article_added_to_fav_by_user request.user article as is_fav %}
+
     <div class="col-4">
         <div class="card">
             <img src="{{ article.photo.url }}" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
@@ -23,12 +25,7 @@
                     Кол-во просмотров: <b>{{ article.views }}</b>
                 </li>
                 <li class="list-group-item">
-                    Автор: 
-                    <b>
-                        <a href="{% url 'profile' article.author %}">
-                            {{ article.author }}
-                        </a>
-                    </b>
+                    Автор: <b>{{ article.author }}</b>
                 </li>
                 <li class="list-group-item">
                     Время создания: <b>{{ article.created_at }}</b>
@@ -37,16 +34,16 @@
                     Категория: <b>{{ article.category }}</b>
                 </li>
             </ul>
-            <div class="card-body d-flex align-item-center justify-content-between">
-                <a href="{% url 'article_detail' article.pk %}" class="card-link btn btn-info">Подробнее</a>
+            <div class="card-body d-flex align-items-center justify-content-between">
+                <a href="{% url 'article_detail' article.pk %}" class="card-link text-decoration-none">Подробнее</a>
                 {% if request.user.is_authenticated %}
 
                     {% if not is_fav %}
-                    <a href="{% url 'add_fav' username=request.user.username article_id=article.pk %}" 
-                        class="text-success fs-5"><i class="bi bi-bookmark-star"></i></a>
+                    <a href="{% url 'add_fav' username=request.user.username article_id=article.pk  %}"
+                       class="text-success fs-5"><i class="bi bi-bookmark-star"></i></a>
                     {% else %}
-                    <a href="{% url 'delete_fav' username=request.user.username article_id=article.pk %}" 
-                        class="text-success fs-5"><i class="bi bi-bookmark-star-fill"></i></a>
+                    <a href="{% url 'delete_fav' username=request.user.username article_id=article.pk  %}"
+                       class="text-success fs-5"><i class="bi bi-bookmark-star-fill"></i></a>
                     {% endif %}
                 {% endif %}
             </div>
@@ -54,4 +51,5 @@
     </div>
     {% endfor %}
 </div>
+
 {% endblock content %}
