--- a/blog/web_site/templates/web_site/profile.html
+++ b/blog/web_site/templates/web_site/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Профиль: {{ user.username }}
+{{ user.username }}
 {% endblock title %}
 
 
@@ -14,7 +14,7 @@
         Почта: <b>{{ user.email }}</b>
     </div>
     <div class="list-group-item list-group-item-action">
-        На сайте с <b>{{ user.date_joined }}</b>
+        На сайте с: <b>{{ user.date_joined.date }}</b>
     </div>
     <div class="list-group-item list-group-item-action">
         Всего просмотров: <b>{{ total_views }}</b>
@@ -56,4 +56,4 @@
     {% endfor %}
 </div>
 
-{% endblock content %}
+{% endblock %}
